src/test/ui/existential_types/generic_type_does_not_live_long_enough.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/generic_type_does_not_live_long_enough.rs:16:1
   |
LL | existential type WrongGeneric<T>: 'static;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/generic_type_does_not_live_long_enough.rs:20:5
   |
LL |     t
   |     ^
   |
   = help: consider adding an explicit lifetime bound `T: 'static`...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0310`.
